--- a/package.json
+++ b/package.json
@@ -13,9 +13,27 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@mantine/core": "^7.17.1",
+    "@mantine/dates": "^7.17.1",
+    "@mantine/dropzone": "^7.17.1",
+    "@mantine/hooks": "^7.17.1",
+    "@mantine/modals": "^7.17.1",
+    "@mantine/notifications": "^7.17.1",
+    "@mantine/nprogress": "^7.17.1",
+    "@mantine/spotlight": "^7.17.1",
+    "@mantine/tiptap": "^7.17.1",
+    "@tailwindcss/postcss": "^4.0.12",
+    "@tiptap/extension-link": "^2.11.5",
+    "@tiptap/pm": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
+    "dayjs": "^1.11.13",
     "next": "^14.2.6",
+    "postcss": "^8.5.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.15",
+    "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -26,6 +44,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "22.5.0",
     "@types/react": "18.3.4",
+    "@types/styled-components": "^5.1.34",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-react-hooks": "^4.6.2",
