--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@mantine/charts": "^7.17.1",
     "@mantine/core": "^7.17.1",
     "@mantine/dates": "^7.17.1",
     "@mantine/dropzone": "^7.17.1",
@@ -32,6 +33,7 @@
     "postcss": "^8.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "2",
     "styled-components": "^6.1.15",
     "tailwindcss": "^4.0.12"
   },
@@ -44,7 +46,6 @@
     "@types/jest": "^29.5.12",
     "@types/node": "22.5.0",
     "@types/react": "18.3.4",
-    "@types/styled-components": "^5.1.34",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-react-hooks": "^4.6.2",
