--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2020", // ECMAScript 타겟 버전을 최신으로 설정
-    "lib": [
-      "ES2020",
-      "DOM",
-      "DOM.Iterable"
-    ], // DOM과 ES 표준 라이브러리를 포함
+    "lib": ["ES2020", "DOM", "DOM.Iterable"], // DOM과 ES 표준 라이브러리를 포함
     "useDefineForClassFields": true, // 클래스 필드의 동작을 최신 사양에 맞게 설정
     "module": "ESNext", // 최신 ESMAScript 모듈 시스템 사용
     "skipLibCheck": true, // 라이브러리의 타입 검사를 생략하여 빌드 속도 향상
-    "baseUrl": "./", // 기본 경로 설정
+    "baseUrl": "./src", // 기본 경로 설정
     /* Bundler mode */
     "moduleResolution": "Node", // Node.js 모듈 해석 방식 사용
     "resolveJsonModule": true, // JSON 파일을 import 할 수 있도록 설정
@@ -26,36 +22,16 @@
     "noUnusedParameters": true, // 사용되지 않은 파라미터들 검사
     "noFallthroughCasesInSwitch": true,
     "paths": {
-      "@/*": [
-        "*"
-      ],
-      "@features/*": [
-        "features/*"
-      ],
-      "@entities/*": [
-        "entities/*"
-      ],
-      "@shared/*": [
-        "shared/*"
-      ],
-      "@@types/*": [
-        "types/*"
-      ],
-      "@widgets/*": [
-        "widgets/*"
-      ],
-      "@assets/*": [
-        "assets/*"
-      ],
-      "@app/*": [
-        "app/*"
-      ]
+      "@/*": ["/*"],
+      "@features/*": ["features/*"],
+      "@entities/*": ["entities/*"],
+      "@shared/*": ["shared/*"],
+      "@@types/*": ["types/*"],
+      "@widgets/*": ["widgets/*"],
+      "@assets/*": ["assets/*"],
+      "@app/*": ["app/*"]
     },
-    "types": [
-      "jest",
-      "@testing-library/jest-dom",
-      "@jest/globals"
-    ], // Vite, Jest, RTL 타입 추가
+    "types": ["jest", "@testing-library/jest-dom", "@jest/globals"], // Vite, Jest, RTL 타입 추가
     "allowJs": true,
     "incremental": true,
     "plugins": [
@@ -64,14 +40,6 @@
       }
     ]
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    ".next"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules", ".next"]
 }
