--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mantine/nprogress": "^7.17.1",
     "@mantine/spotlight": "^7.17.1",
     "@mantine/tiptap": "^7.17.1",
+    "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.0.12",
     "@tiptap/extension-link": "^2.11.5",
     "@tiptap/pm": "^2.11.5",
@@ -46,6 +47,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "22.5.0",
     "@types/react": "18.3.4",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-react-hooks": "^4.6.2",
@@ -53,6 +55,8 @@
     "globals": "^15.9.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
