--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/core": "^7.17.1",
     "@mantine/dates": "^7.17.1",
     "@mantine/dropzone": "^7.17.1",
+    "@mantine/form": "^7.17.2",
     "@mantine/hooks": "^7.17.1",
     "@mantine/modals": "^7.17.1",
     "@mantine/notifications": "^7.17.1",
