--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_KAKAO_MAP_API_KEY=c51011f25c90dda88d02b594daf1c841
+NEXT_PUBLIC_KAKAO_MAP_API_KEY=29dd00ba7d37153b1ce7ca1465cf2d27 # 카카오 Developers > 테스트 앱 키 (추후, 비즈 앱 심사 받고 정식 키 발급 필요)
