🔩 #2 production mode script 명령어 신규 추가

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "test:auto": "jest --watch --coverage",
+    "start": "next start",
     "dev": "next dev",
     "build": "pnpm eslint . && next build"
   },
