--- a/package.json
+++ b/package.json
@@ -14,56 +14,56 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@mantine/charts": "^7.17.1",
-    "@mantine/core": "^7.17.1",
-    "@mantine/dates": "^7.17.1",
-    "@mantine/dropzone": "^7.17.1",
-    "@mantine/form": "^7.17.2",
-    "@mantine/hooks": "^7.17.1",
-    "@mantine/modals": "^7.17.1",
-    "@mantine/notifications": "^7.17.1",
-    "@mantine/nprogress": "^7.17.1",
-    "@mantine/spotlight": "^7.17.1",
-    "@mantine/tiptap": "^7.17.1",
-    "@tabler/icons-react": "^3.31.0",
-    "@tailwindcss/postcss": "^4.0.12",
-    "@tiptap/extension-link": "^2.11.5",
-    "@tiptap/pm": "^2.11.5",
-    "@tiptap/react": "^2.11.5",
-    "@tiptap/starter-kit": "^2.11.5",
+    "@mantine/charts": "^8.0.1",
+    "@mantine/core": "^8.0.1",
+    "@mantine/dates": "^8.0.1",
+    "@mantine/dropzone": "^8.0.1",
+    "@mantine/form": "^8.0.1",
+    "@mantine/hooks": "^8.0.1",
+    "@mantine/modals": "^8.0.1",
+    "@mantine/notifications": "^8.0.1",
+    "@mantine/nprogress": "^8.0.1",
+    "@mantine/spotlight": "^8.0.1",
+    "@mantine/tiptap": "^8.0.1",
+    "@tabler/icons-react": "^3.33.0",
+    "@tailwindcss/postcss": "^4.1.7",
+    "@tiptap/extension-link": "^2.12.0",
+    "@tiptap/pm": "^2.12.0",
+    "@tiptap/react": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
     "dayjs": "^1.11.13",
-    "next": "^14.2.6",
+    "next": "^14.2.29",
     "postcss": "^8.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "2",
-    "styled-components": "^6.1.15",
-    "tailwindcss": "^4.0.12"
+    "recharts": "^2.15.3",
+    "styled-components": "^6.1.18",
+    "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
+    "@eslint/js": "^9.27.0",
     "@jest/globals": "^29.7.0",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.12",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "22.5.0",
     "@types/react": "18.3.4",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.0.1",
-    "eslint-plugin-import": "^2.25.2",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^15.15.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "kakao.maps.d.ts": "^0.1.40",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
-    "prettier": "^3.3.3",
-    "ts-jest": "^29.2.5",
+    "prettier": "^3.5.3",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "typescript": "5.5.4",
-    "typescript-eslint": "^8.2.0"
+    "typescript-eslint": "^8.32.1"
   }
 }
