🔩 #1 `eslint 검사 스크립트 ` 명령어 추가

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:auto": "jest --watch --coverage",
     "start": "next start",
     "dev": "next dev",
+    "lint": "eslint .",
     "build": "pnpm eslint . && next build"
   },
   "keywords": [],
