:construction: #1 버스킹 장소 정보 수정 UI 구현 중

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
       "@@types/*": ["types/*"],
       "@widgets/*": ["widgets/*"],
       "@assets/*": ["assets/*"],
-      "@app/*": ["app/*"]
+      "@app/*": ["app/*"],
+      "@store/*": ["store/*"]
     },
     "types": [
       "jest",
