--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-dom": "^18.3.1",
     "recharts": "^2.15.3",
     "styled-components": "^6.1.18",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
